@@ -82,7 +82,7 @@ class Events extends ZMEvents {
      */
     public function update($notifier, $eventId, $args=array()) {
         $method = $this->event2method($eventId, 'on');
-        $this->eventLog_[] = array('id' => $eventId, 'method' => $method, 'time' => Runtime::getExecutionTime(), 'args' => $args);
+        $this->eventLog_[] = array('id' => $eventId, 'method' => $method, 'time' => Runtime::getExecutionTime(), 'memory' => memory_get_usage(), 'args' => $args);
         ZMLogging::instance()->log('fire zen-cart event: ' . $eventId . '/'.$method, ZMLogging::DEBUG);
         foreach($this->subscribers_ as $subscriber) {
             if (null === $subscriber['methods']) {
