@@ -92,6 +92,8 @@ Release 0.9.7
 - srew up most plugins by refactoring the config value handling to use
   widgets; this will require a re-install of all plugins!
 - allow plugins to hide widgets from plugin manager by setting hidden=true
+- log used memory as per memory_get_usage() for each event and report via
+  zm_page_stats
 
 Release 0.9.6
 - add sanitize parameter to ZMRequest::getParameterMap()
